--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,7 +5,7 @@
   </header>
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
-    <%= form_with model: @item, url: item_index_path, local: true do |f| %>
+    <%= form_with model: @item, url: items_path, local: true do |f| %>
 
       <%= render 'shared/error_messages', model: f.object %>
 
@@ -79,7 +79,7 @@
             発送までの日数
             <span class="indispensable">必須</span>
           </div>
-          <%= f.collection_select(:shipping_day_id, ShippingDay.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
+          <%= f.collection_select(:delivery_day_id, DeliveryDay.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
         </div>
       </div>
       <%# /配送について %>
