--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,8 +126,7 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <% if @items %>
+      <% if @items != nil %>
         <% @items.each do |item| %>
           <li class='list'>
             <%= link_to "#" do %>
@@ -156,7 +155,6 @@
             <% end %>
           </li>
         <% end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% else %>
       <%# 商品がない場合のダミー %>
         <li class='list'>
