再 ビューファイルの条件式の修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,7 +126,7 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-      <% if @items != nil %>
+      <% if @items != [] %>
         <% @items.each do |item| %>
           <li class='list'>
             <%= link_to "#" do %>
